added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,33 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
+
+
   <body>
     <header id="header">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
+
+
     <main>
       <section class="card" id="html-section">
-        <h2></HTML></h2>
+        <h2>HTML</h2>
+
         </ul>
             <li>The head element contains information about the webpage.</li>
             <li>The body element represents the visibile content shown to the user.</li>
             <li>HyperText Markup Language</li>
+            <li>HTML strictly handles the structure and content of a webpage</li>
         </ul>
       </section>
    
       <section class="card" id="css-section">
         <h2>CSS</h2>
+
         </ul>
-            <li>Enter your CSS notes here</li>
-            <li>Enter your CSS notes here</li>
+            <li>A padding indicates how much space we want around the content inside an element.</li>
+            <li>A margin indicates how much space we want around the outside of an element.</li>
+            <li>https://htmlcolorcodes.com/ use for color codes</li>
+            <li>CSS defines the colors, aesthetics, visual layout, and organization.</li>
         </ul>    
       </section>
    
       <section class="card" id="git-section">
         <h2>Git</h2>
+
         </ul>
             <li>git status: check what branch we are currently on</li>
             <li>git checkout -b branch-name: creates a new branch and switches to it</li>
@@ -39,6 +50,7 @@
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
+
         </ul>
             <li>Enter your JavaScript notes here</li>
             <li>Enter your JavaScript notes here</li>
@@ -51,3 +63,5 @@
     </footer>
   </body>
 </html>
+
+
